--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,6 +96,8 @@ stages:
         # Get the App Service name for the dev environment.
         WebAppNameDev=$(terraform output appservice_name_dev)
 
+        echo $WebAppNameDev
+
         # Write the WebAppNameDev variable to the pipeline.
         echo "##vso[task.setvariable variable=WebAppNameDev;isOutput=true]$WebAppNameDev"
       name: 'RunTerraform'
