--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,7 +97,7 @@ stages:
         WebAppNameDev=$(terraform output appservice_name_dev)
 
         # Write the WebAppNameDev variable to the pipeline.
-        echo "##vso[task.setvariable variable=WebAppNameDev;isOutput=true]$WebAppNameDev"
+        echo '##vso[task.setvariable variable=WebAppNameDev;isOutput=true]$WebAppNameDev'
       name: 'RunTerraform'
       displayName: 'Run Terraform'
       env:
@@ -118,10 +118,6 @@ stages:
           steps:
           - download: current
             artifact: drop
-          - script: |
-              echo $(WebAppNameDev)
-            name: 'Debug'
-            displayName: 'Inspect WebAppNameDev value'
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
